[package]
name = "hopcroft-karp"
version = "0.2.0"
authors = ["felix <felix.reidl@gmail.com>"]
edition = "2021"
repository = "https://github.com/microgravitas/hopcroft-karp"
description = "A minimal implementation of the Hopcrof-Karp bipartite matching algorithm."
license = "MIT"

[dependencies]
fxhash = "0.2.1"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
